--- a/src/CalendarComponents/Calendar.css
+++ b/src/CalendarComponents/Calendar.css
@@ -6,7 +6,7 @@
   width: 25%;
   height: 98%;
   position: absolute;
-  box-shadow: 0 0 5px 5px rgba(0,0,0,0.25);
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.25);
   bottom: 1%;
   left: 1%;
   background: rgba(255,255,255,0.33);
@@ -26,14 +26,27 @@
   border: none;
 }
 .date {
-  background: rgba(0,0,0,0.5);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 20%;
   height: 100%;
+  padding: 0.25rem;
 }
+
+.date-inner {
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  /*border: 2px inset rgba(255,255,255,0.75);*/
+  text-align: left;
+  font-size: 0.75rem;
+  background: rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+  padding-left: 0.2rem;
+}
+
+.date-inner > *{
+}
+
 .events {
   display: flex;
   justify-content: center;
