--- a/src/PicsNNews/News/News.css
+++ b/src/PicsNNews/News/News.css
@@ -4,6 +4,7 @@
   justify-content: space-around;
   align-items: center;
   background: rgba(255,255,255,0.25);
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.25);
   backdrop-filter: blur(2.5px);
   width: 40%;
   height: 100%;
