--- a/src/PicsNNews/PicsNNews.css
+++ b/src/PicsNNews/PicsNNews.css
@@ -19,6 +19,7 @@
   position: relative;
   backdrop-filter: blur(2.5px);
   background-color: rgba(255,255,255,0.33);
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.25);
   color: white;
   display: flex;
   justify-content: center;
@@ -31,6 +32,7 @@
   height: 100%;
   width: 39.5%;
   background: #333;
+
 }
 
 img {
