--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 100%;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   height: 100vh;
   width: 100vw;
